--- a/HartleyAndMarks/HartleyAndMarks/Views/Products/Index.cshtml
+++ b/HartleyAndMarks/HartleyAndMarks/Views/Products/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<HartleyAndMarks.Models.Product>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Game Store";
 }
 
 <h2>Index</h2>
