Comparison of built in classes. Responsive images.
I've changed the new releases section to highlight the built in
bootstrap classes (well & thumbnail) and made the images responsive at
lower resolutions.

--- a/HartleyAndMarks/HartleyAndMarks/Views/Products/Index.cshtml
+++ b/HartleyAndMarks/HartleyAndMarks/Views/Products/Index.cshtml
@@ -8,30 +8,31 @@
 
 <div>
     <h2>New Releases</h2>
-    <div class="group-container">
+    <div class="well row">
         @foreach (var m in Model.Where(p => p.IsNew()))
         {
-            <div class="col-xs-12 col-lg-6 item-divider">
-                <div class="item-container">
-                    <div class="col-xs-12 col-md-6">
-                        <div class="item-img-container">
-                            <img src="~/Content/images/@m.BoxShot" width="243" height="323" alt="@m.Name" title="@m.Name" />
+            <div class="col-xs-12 col-lg-6">
+                <div class="thumbnail">
+                    <div class="row">
+                        <div class="col-xs-12 col-md-6">
+                            <div class="item-img-container">
+                                <img class="img-responsive" src="~/Content/images/@m.BoxShot" width="243" height="323" alt="@m.Name" title="@m.Name" />
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                        @*<div style="margin-left:253px; overflow:auto">*@
-                        <div class="item-content-container">
-                            <div class="item-content-heading">
-                                <span class="big-font">@m.Name</span>
-                                <span class="side-note">@m.Publisher</span>
-                            </div>
-                            <div class="item-content-body">
-                                <p>
-                                    @m.Description
-                                </p>
-                            </div>
-                            <div class="item-content-footer">
-                                <input type="button" data-name="@m.Name" value="Buy Now" class="btn btn-success btn-block"/>
+                        <div class="col-xs-12 col-md-6">
+                            <div class="item-content-container">
+                                <div class="item-content-heading">
+                                    <span class="big-font">@m.Name</span>
+                                    <span class="side-note">@m.Publisher</span>
+                                </div>
+                                <div class="item-content-body">
+                                    <p>
+                                        @m.Description
+                                    </p>
+                                </div>
+                                <div class="item-content-footer">
+                                    <input type="button" data-name="@m.Name" value="Buy Now" class="btn btn-success btn-block" />
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -47,11 +48,10 @@
                 <div class="item-container">
                     <div class="col-xs-12 col-md-6">
                         <div class="item-img-container">
-                            <img src="~/Content/images/@m.BoxShot" width="243" height="323" alt="@m.Name" title="@m.Name" />
+                            <img class="img-responsive" src="~/Content/images/@m.BoxShot" width="243" height="323" alt="@m.Name" title="@m.Name" />
                         </div>
                     </div>
                     <div class="col-xs-12 col-md-6">
-                        @*<div style="margin-left:253px; overflow:auto">*@
                         <div class="item-content-container">
                             <div class="item-content-heading">
                                 <span class="big-font">@m.Name</span>
