--- a/HartleyAndMarks/HartleyAndMarks/Content/style.css
+++ b/HartleyAndMarks/HartleyAndMarks/Content/style.css
@@ -11,7 +11,6 @@
 
 .group-container {
     min-height: 20px;
-    min-width: 323px;
     padding: 20px 0 0 20px;
     margin: 0 -10px 30px -10px;
     background-color: #f5f5f5;
@@ -37,8 +36,7 @@
 }
 
 .item-img-container {
-    width: 243px;
-    height: 323px;
+    max-width: 243px;
     margin: auto;
 }
 
